--- a/app/src/main/res/drawable/back_text.xml
+++ b/app/src/main/res/drawable/back_text.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#E9FFFFFF"
-        android:centerColor="#C6FFFFFF"
+        android:startColor="#3EFFFFFF"
+        android:centerColor="#9EFFFFFF"
+        android:endColor="#E4FFFFFF"
         android:angle="270" />
 </shape>
